--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
     "helmet": "^8.0.0",
     "hpp": "^0.2.3",
     "mongoose": "^8.8.4",
+    "mongoose-unique-validator": "^5.0.1",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.7"
   }
