--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
     "mongoose": "^8.8.4",
     "mongoose-unique-validator": "^5.0.1",
     "morgan": "^1.10.0",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "password-validator": "^5.3.0"
   }
 }
