install json web token and crfeate token in env file

--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,4 @@ DB_PRJ_NAME = "grp_2024"
 DB_CLUSTER = "cluster0.4fcbh"
 DB_USER = "GC" 
 DB_PSWD = "GC"
+JWT_KEY_TOKEN="?6Q8,3hkBdhT6V7245353yF9!x~Ys{4=,Sc"
