--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
     "express-mongo-sanitize": "^2.2.0",
     "helmet": "^8.0.0",
     "hpp": "^0.2.3",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.4",
     "mongoose-unique-validator": "^5.0.1",
     "morgan": "^1.10.0",
