--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
     "mongoose": "^8.8.4",
     "mongoose-unique-validator": "^5.0.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.7",
     "password-validator": "^5.3.0"
   }
